# bitstorm-saas-repo

./: .gitignore  LICENSE  README.md  REQUIREMENTS.md  count_to_infinity.py  main.py  pyproject.toml
backend/: .env.example
backend/accounts/: admin.py  auth_utils.py  cnp_utils.py  models.py  openapi.py  phone_utils.py  serializers.py  two_factor.py  urls.py  user_cleanup.py  views.py  views_2fa.py
backend/accounts/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_user_languages.py  0004_user_totp_confirmed_user_totp_secret_and_more.py  0005_remove_user_two_factor_method_user_sms_2fa_enabled.py  0006_normalize_phone_numbers.py  0007_user_cnp_lookup_hash.py  0008_outstandingtoken_user_cascade.py  0009_blacklistedtoken_cascade.py
backend/config/: settings.py  urls.py
backend/core/: booking_service.py  geo_utils.py  marketplace_serializers.py  models.py  openapi.py  permissions.py  serializers.py  slot_service.py  tests.py  urls.py  urls_marketplace.py  views.py  views_marketplace.py
backend/core/migrations/: 0001_initial.py  0002_remove_providerprofile_languages_and_more.py  0003_alter_providerreview_unique_together_and_more.py  (+1 more)
backend/db/: README.md  migrate_medical.sql
backend/db/accounts/: accounts_user.csv  (+3 more)
backend/scripts/: build_seed_csvs.py  check_seed_refs.py  generate_medical_sql.py  load_geolocation_csv.py  load_medical_seeds.py  reset_and_seed_db.py
frontend/: .env.example  .env.production  index.html  package-lock.json  package.json
frontend/.lovable/: plan.md
frontend/src/: main.tsx  routeTree.gen.ts  router.tsx  styles.css
(+79 files in other folders)
