[project]
name = "bitstorm-saas-repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.5",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "dotenv>=0.9.9",
    "pre-commit>=4.6.0",
    "psycopg2-binary>=2.9.12",
]
